@@ -217,6 +217,11 @@ hextorio-dungeon-chance-vulcanus=[planet=vulcanus] Dungeon Chance
 hextorio-dungeon-chance-fulgora=[planet=fulgora] Dungeon Chance
 hextorio-dungeon-chance-gleba=[planet=gleba] Dungeon Chance
 hextorio-dungeon-chance-aquilo=[planet=aquilo] Dungeon Chance
+hextorio-base-trade-prod-nauvis=[planet=nauvis] Trade Productivity.
+hextorio-base-trade-prod-vulcanus=[planet=vulcanus] Trade Productivity.
+hextorio-base-trade-prod-fulgora=[planet=fulgora] Trade Productivity.
+hextorio-base-trade-prod-gleba=[planet=gleba] Trade Productivity.
+hextorio-base-trade-prod-aquilo=[planet=aquilo] Trade Productivity.
 
 [mod-setting-description]
 hextorio-claimed-hex-tile=The tile used to pave over claimed hexes.
@@ -326,6 +331,11 @@ hextorio-dungeon-chance-vulcanus=Chance of any newly charted hex spawning a dung
 hextorio-dungeon-chance-fulgora=Chance of any newly charted hex spawning a dungeon on [planet=fulgora].
 hextorio-dungeon-chance-gleba=Chance of any newly charted hex spawning a dungeon on [planet=gleba].
 hextorio-dungeon-chance-aquilo=Chance of any newly charted hex spawning a dungeon on [planet=aquilo].
+hextorio-base-trade-prod-nauvis=Trade productivity modifier on [planet=nauvis].
+hextorio-base-trade-prod-vulcanus=Trade productivity modifier on [planet=vulcanus].
+hextorio-base-trade-prod-fulgora=Trade productivity modifier on [planet=fulgora].
+hextorio-base-trade-prod-gleba=Trade productivity modifier on [planet=gleba].
+hextorio-base-trade-prod-aquilo=Trade productivity modifier on [planet=aquilo].
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-nauvis-random=Random
@@ -460,6 +470,7 @@ interplanetary-trade-tooltip-header=[space-age] INTERPLANETARY TRADE [space-age]
 export-json=Export JSON
 export-json-tooltip=Encoded in the same way as blueprint strings.\n(Base64 decode, then zlib decompress to obtain JSON.)
 exported-json-frame-title=All Trades as JSON
+negative-prod-meaning=Negative productivity means\nsometimes the trade doesn't output items.
 
 [quantum-bazaar]
 sell-in-hand-header=Sell in Hand
@@ -630,7 +641,7 @@ catalog-initiate=It's time to level up your catalog items. Check the catalog to 
 #experienced-trader=Set up your factory to automate trading with multiple hex cores! You've probably found some good loops to make this happen efficiently.
 #avid-trader=You seem to enjoy this! Automate trading with several hex cores. This can be multiple hex cores in a giant coin loop or multiple separate loops.
 #obsessive-trader=This is likely unnecessary for optimal production, but see if it's good. Automate trading with many hex cores.
-dark-factorian-dungeon=This planet has dungeons of an ancient but familiar civilization scattered across its oceans. Can you take one down? 
+dark-factorian-dungeon=This planet has dungeons of an ancient but familiar civilization scattered around. Can you take one down? 
 lazy-looter=It's tiring work. Good thing you have drones to do the work for you! Especially if the drones are mechanical arachnids.
 stepping-on-ants=It's just a small one, it can't be that hard!
 stepping-on-beetles=Show them who owns this planet!
