@@ -63,4 +63,50 @@ data:extend({
         default_value = 1.5,
         minimum_value = 0.1,
     },
+
+    {
+        type = "double-setting",
+        name = "hextorio-base-trade-prod-nauvis",
+        setting_type = "runtime-global",
+        default_value = -0.2,
+        minimum_value = -10,
+        maximum_value = 10,
+        order = "m[trades]-p[nauvis]-t[base-prod]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-base-trade-prod-vulcanus",
+        setting_type = "runtime-global",
+        default_value = -0.1,
+        minimum_value = -10,
+        maximum_value = 10,
+        order = "m[trades]-p[nauvis]-t[base-prod]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-base-trade-prod-fulgora",
+        setting_type = "runtime-global",
+        default_value = 0,
+        minimum_value = -10,
+        maximum_value = 10,
+        order = "m[trades]-p[nauvis]-t[base-prod]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-base-trade-prod-gleba",
+        setting_type = "runtime-global",
+        default_value = 0.1,
+        minimum_value = -10,
+        maximum_value = 10,
+        order = "m[trades]-p[nauvis]-t[base-prod]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-base-trade-prod-aquilo",
+        setting_type = "runtime-global",
+        default_value = 0.2,
+        minimum_value = -10,
+        maximum_value = 10,
+        order = "m[trades]-p[nauvis]-t[base-prod]",
+    },
 })
